syntax = "proto3";

package generator.v1;

service GeneratorService {
    rpc CreateApp (CreateAppRequest) returns (PwaAppResponse);
    rpc GetAppById (GetAppByIdRequest) returns (PwaAppResponse);
}


message CreateAppRequest {
    string name = 1;
    string domain = 2;
    string createdByUserId = 3;
    int32 templateId = 4;
    string description = 5;
    string appId = 6;
}

message GetAppByIdRequest {
    string appId = 1;
}

message PwaAppResponse {
    string id = 1;
    string name = 2;
    string domain = 3;
    string description = 4;
    string createdByUserId = 5;
    string status = 6;
    string buildStatus = 7;
}